# qemu-syborg

./: README  README.md
applications/SymbianLogo_TextShell/: BLD.INF  README.txt  SymbianLogo.cpp  SymbianLogo.iby  SymbianLogo.mmp
applications/Symbian_MiniGUI_TestApp/: BLD.INF  Grid.iby  Grid.mmp  grid.cpp  yuv.cpp  yuv.iby  yuv.mmp
baseport/syborg/: armv5.mbc  armv5test.mbc  base.iby  bld.inf  config.inc  estart.txt  kasyborg.mmp  syborg-elf.cfg  syborg.dtb  syborg.dts  syborg.mrp  syborg.oby  trk_l1.ini  variant.mmh
docs/wiki/: Alternative Stop-mode Debugging.doc  Armv7.doc  Building ROMS with syborg.doc  Building the SVP.doc  ELF4ROM.doc  Ethernet Virtio.doc  Flexible Memory Model.doc  How to create Symbian peripherals with Qemu.doc  Run-mode Debugging.doc  SVP E32-F32 Testing.doc  SVP Host Filesystem.doc  Snapshots.doc  Stop-mode Debugging.doc  Using the SVP.doc
symbian-qemu-0.9.1-12/: gnu-0.9.1-12-arm-none-symbianelf.txt  symbian-qemu-0.9.1-12-arm-none-symbianelf.sh
symbian-qemu-0.9.1-12/dtc-trunk/: ChangeLog.csl  Makefile.am  Makefile.in  acinclude.m4  config.h.in  configure  configure.ac  dtc-lexer.l  dtc.c  flattree.c  fstree.c  ftdump.c
symbian-qemu-0.9.1-12/libsdl-trunk/: ChangeLog.csl  configure
symbian-qemu-0.9.1-12/model-libraries/: Makefile
symbian-qemu-0.9.1-12/qemu-symbian-svp/: ChangeLog.csl  Makefile  Makefile.target  alpha.ld  arm-semi.c  arm.ld  configure  console.c  console.h  cpu-all.h  cpu-defs.h  curses.c  cutils.c  devtree.c  devtree.h  disas.c  display_state.h  exec-all.h  exec.c  gdbstub.c  gdbstub.h  gen_devices.sh  gui.c  (+34 more)
(+533 files in other folders)
