#                                               -*- Autoconf -*-
# Copyright (C) 2008 CodeSourcery
# All rights reserved.
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(dtc, 1.2.0, support@codesourcery.com)
AM_INIT_AUTOMAKE

AC_CANONICAL_HOST

# Checks for programs.
AC_PROG_CC
AC_PROG_YACC
AC_PROG_LEX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_GNU_SOURCE

# Checks for library functions.

# Other checks.

CSL_AC_MAINTAINER_MODE
CSL_AC_PKGVERSION
CSL_AC_BUGURL

AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
